Fix test execution with regard to jacoco and jmockit